--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "firebase-local": "firebase emulators:start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
